Curso 06 · Aula 06 · Atividade 06 · A classe Number